welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:13: error: type mismatch;
 found   : Unit
 required: java.awt.Color
        case _ =>
               ^SlugTracking:6: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  if ( estFaceMur == false ){
  ^SlugTracking:18: error: type mismatch;
 found   : Unit
 required: Boolean
} 
^